# mk

./: .ansible-lint  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc.yaml  .pylintrc  .readthedocs.yml  .tool-versions  .yamllint  LICENSE  MANIFEST.in  README.md  SECURITY.md  biome.jsonc  codecov.yml  cspell.config.yaml  mise.toml  mkdocs.yml  mypy.ini  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt  tox.ini
.config/: constraints.txt  dictionary.txt  requirements-docs.txt  requirements-test.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  lower-constraints.txt  release-drafter.yml  renovate.json
.github/workflows/: ack.yml  push.yml  release-drafter.yml  release.yml  tox.yml
docs/: README.md  multirepo.md  tools.md
docs/.overrides/: main.html
docs/images/: logo.afdesign
docs/stylesheets/: extra.css
lib/mk/: __init__.py  __main__.py  runner.py
lib/mk/tools/: __init__.py
playbooks/: example-playbook.yml  test-integration.yml
samples/deep/: package.json
samples/integration/: ansible-lint.txt  cookiecutter.txt  flask-babel.txt  just.txt  nox.txt  podman.txt  typeshed.txt
src/mk/: __init__.py  __main__.py  _typer.py  ctx.py  exec.py  loaders.py  pre.py  runner.py  text.py
src/mk/tools/: __init__.py  ansible.py  cmake.py  git.py  just.py  make.py  node.py  nox.py  npm.py  pre.py  pre_commit.py  py_package.py  pytest.py  shell.py  taskfile.py  tox.py
test/: pre.yml  test_cli.py  test_pre.py
tools/: example-shell.sh  pkg.sh  smoke.sh
