# -*- coding: utf-8 -*-
[metadata]
name = mk
description = mk
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mk
maintainer = Sorin Sbarnea
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer_email = sorin.sbarnea@gmail.com
url = https://github.com/pycontribs/mk
project_urls =
    Source=https://github.com/pycontribs/mk
    Tracker=https://github.com/pycontribs/mk
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning

    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Topic :: Software Development
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
    GitPython
    blessings
    click >= 7.1.2
    click-help-colors
    colorama  # for Windows
    importlib-metadata
    pygments
    pyyaml
    rich >= 9.0
    shellingham
    typer

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mk=mk.__main__:cli

[flake8]
max-complexity = 22

ignore =
    E203, W503, C901, E402, B011
    E501 # line too long (black takes care of that)
    D  # temporary during initial development
